WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202094
WebPage::sessionID() does not need to get the sessionID from there WebCore Page
https://bugs.webkit.org/show_bug.cgi?id=202094
Summary
WebPage::sessionID() does not need to get the sessionID from there WebCore Page
Chris Dumez
Reported
2019-09-22 19:06:08 PDT
WebPage::sessionID() does not need to get the sessionID from there WebCore Page.
Attachments
Patch
(2.74 KB, patch)
2019-09-22 19:07 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(2.95 KB, patch)
2019-09-23 08:22 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-22 19:07:48 PDT
Created
attachment 379351
[details]
Patch
youenn fablet
Comment 2
2019-09-22 22:48:50 PDT
Comment on
attachment 379351
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=379351&action=review
> Source/WebKit/WebProcess/WebPage/WebPage.h:297 > bool usesEphemeralSession() const { return m_page->usesEphemeralSession(); }
Can we fix usesEphemeralSession() as well?
Chris Dumez
Comment 3
2019-09-23 08:22:16 PDT
Created
attachment 379370
[details]
Patch
Chris Dumez
Comment 4
2019-09-23 08:38:37 PDT
(In reply to youenn fablet from
comment #2
)
> Comment on
attachment 379351
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=379351&action=review
> > > Source/WebKit/WebProcess/WebPage/WebPage.h:297 > > bool usesEphemeralSession() const { return m_page->usesEphemeralSession(); } > > Can we fix usesEphemeralSession() as well?
Good catch, fixed.
WebKit Commit Bot
Comment 5
2019-09-23 09:31:22 PDT
Comment on
attachment 379370
[details]
Patch Clearing flags on attachment: 379370 Committed
r250236
: <
https://trac.webkit.org/changeset/250236
>
WebKit Commit Bot
Comment 6
2019-09-23 09:31:23 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2019-09-23 09:32:27 PDT
<
rdar://problem/55625642
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug