WebPage::sessionID() does not need to get the sessionID from there WebCore Page https://bugs.webkit.org/show_bug.cgi?id=202094

Reviewed by Youenn Fablet.

WebPage::sessionID() does not need to get the sessionID from there WebCore Page, it can
simply get the sessionID from the WebProcess singleton, now that we have a single session
per WebProcess. This will avoid potential crashes trying to dereference m_page to get the
sessionID, since m_page can be null.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::sessionID const):
* WebProcess/WebPage/WebPage.h:
(WebKit::WebPage::sessionID const): Deleted.


Canonical link: https://commits.webkit.org/215707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250236 268f45cc-cd09-0410-ab3c-d52691b4dbfc